--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,15 +1,19 @@
 {
-    // Utilisez IntelliSense pour en savoir plus sur les attributs possibles.
-    // Pointez pour afficher la description des attributs existants.
-    // Pour plus d'informations, visitez : https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "Launch Package",
+            "name": "Launch server Package",
             "type": "go",
             "request": "launch",
-            "mode": "auto",
-            "program": "${fileDirname}"
+            "mode": "debug",
+            "program": "server.go"
+        },
+        {
+            "name": "Launch client Package",
+            "type": "go",
+            "request": "launch",
+            "mode": "debug",
+            "program": "tests/client.go"
         }
     ]
 }
