--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,7 +6,7 @@
             "type": "go",
             "request": "launch",
             "mode": "debug",
-            "program": "server.go"
+            "program": "main.go"
         },
         {
             "name": "Launch client Package",
